/*
 * Copyright (C) 2020 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto2";

package perfetto.protos;

message ChromeLatencyInfo {
  optional int64 trace_id = 1;

  enum Step {
    STEP_UNSPECIFIED = 0;
    STEP_HANDLE_INPUT_EVENT_MAIN_COMMIT = 1;
    STEP_MAIN_THREAD_SCROLL_UPDATE = 2;
    STEP_SEND_INPUT_EVENT_UI = 3;
    STEP_HANDLE_INPUT_EVENT_MAIN = 4;
    STEP_HANDLE_INPUT_EVENT_IMPL = 5;
    STEP_SWAP_BUFFERS = 6;
    STEP_DRAW_AND_SWAP = 7;
  };

  optional Step step = 2;
}
